--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,13 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "コードの整形",
+            "type": "shell",
+            "command": "ruff check ./ --fix",
+            "args": [],
+            "problemMatcher": [],
+        },
+        {
             "label": "mainブランチから新規ブランチ作成",
             "type": "shell",
             "command": "git checkout main && git pull && git checkout -b ${input:branch}",
