--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,18 @@
 version: "3"
 services:
+  api:
+    container_name: api
+    image: ghcr.io/teamshackathon/dev/ai-agnet-backend:latest
+    volumes: 
+      - ./:/app/
+    restart: always
+    environment:
+      - ENVIRONMENT=development
+    entrypoint: bash -c "chmod 777 /app/dev_start.sh && bash /app/dev_start.sh"
+    ports:
+      - 8000:8000
+    depends_on:
+      - db
   db:
     container_name: postgresql
     image: ghcr.io/longlangu/dev/postgres-pg-vector:latest
