--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,6 +41,15 @@ services:
       - ./pgadmin/servers.json:/pgadmin4/servers.json
     depends_on:
       - db
+  doc:
+    container_name: doc
+    image: swaggerapi/swagger-ui:v5.18.2
+    volumes:
+      - ./doc/openapi.yml:/usr/share/nginx/html/openapi.yml
+    environment:
+      API_URL: openapi.yml
+    ports:
+      - 9000:8080
 volumes:
   db_data:
   pgadmin-data:
